[gd_scene load_steps=4 format=3 uid="uid://cid83xghgegbv"]

[ext_resource type="Script" path="res://Scripts/MainScript.gd" id="1_vkioj"]
[ext_resource type="World3D" uid="uid://dlo1lut3c6wjs" path="res://BaseWorldScene.tres" id="2_qqqs8"]
[ext_resource type="PackedScene" uid="uid://bwwwkj44a7gax" path="res://Scenes/BaseScene.tscn" id="3_2v7wa"]

[node name="EditorWindow" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_vkioj")

[node name="HSplitContainer" type="HSplitContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
split_offset = 640

[node name="SubViewportContainer" type="SubViewportContainer" parent="HSplitContainer"]
layout_mode = 2
size_flags_horizontal = 3
stretch = true

[node name="SceneViewport" type="SubViewport" parent="HSplitContainer/SubViewportContainer"]
world_3d = ExtResource("2_qqqs8")
handle_input_locally = false
size = Vector2i(660, 648)
render_target_update_mode = 4

[node name="BaseScene" parent="HSplitContainer/SubViewportContainer/SceneViewport" instance=ExtResource("3_2v7wa")]

[node name="Sidebar" type="Panel" parent="HSplitContainer"]
custom_minimum_size = Vector2(480, 2.08165e-12)
layout_mode = 2
size_flags_horizontal = 3

[node name="TabBar" type="TabBar" parent="HSplitContainer/Sidebar"]
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
offset_bottom = 31.0
grow_horizontal = 2
tab_count = 5
tab_0/title = "Tileset"
tab_1/title = "UVs"
tab_2/title = "Paint"
tab_3/title = "Transform"
tab_4/title = "Scene"

[node name="TabPanelContainer" type="PanelContainer" parent="HSplitContainer/Sidebar"]
layout_mode = 1
anchors_preset = -1
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = 32.0
grow_horizontal = 2
grow_vertical = 0

[node name="TilesetTab" type="VBoxContainer" parent="HSplitContainer/Sidebar/TabPanelContainer"]
layout_mode = 2

[node name="TilesetSelectorScroll" type="ScrollContainer" parent="HSplitContainer/Sidebar/TabPanelContainer/TilesetTab"]
custom_minimum_size = Vector2(2.08165e-12, 64)
layout_direction = 2
layout_mode = 2

[node name="TilesetSelector" type="HBoxContainer" parent="HSplitContainer/Sidebar/TabPanelContainer/TilesetTab/TilesetSelectorScroll"]
layout_mode = 2

[node name="TilesetScrollContainer" type="ScrollContainer" parent="HSplitContainer/Sidebar/TabPanelContainer/TilesetTab"]
custom_minimum_size = Vector2(2.08165e-12, 250)
layout_mode = 2
size_flags_vertical = 3

[node name="TilesetViewer" type="TextureRect" parent="HSplitContainer/Sidebar/TabPanelContainer/TilesetTab/TilesetScrollContainer"]
layout_mode = 2
stretch_mode = 4

[node name="GridContainer" type="GridContainer" parent="HSplitContainer/Sidebar/TabPanelContainer/TilesetTab"]
layout_mode = 2
columns = 3

[node name="UVTilesizeLabel" type="Label" parent="HSplitContainer/Sidebar/TabPanelContainer/TilesetTab/GridContainer"]
layout_mode = 2
text = "UV Tilesize:"

[node name="HBoxContainer" type="HBoxContainer" parent="HSplitContainer/Sidebar/TabPanelContainer/TilesetTab/GridContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="SpinBox_UV_X" type="SpinBox" parent="HSplitContainer/Sidebar/TabPanelContainer/TilesetTab/GridContainer/HBoxContainer"]
layout_mode = 2
focus_neighbor_right = NodePath("../SpinBox_UV_Y")
focus_next = NodePath("../SpinBox_UV_Y")
min_value = 1.0
max_value = 512.0
value = 16.0
exp_edit = true
rounded = true
allow_greater = true
suffix = "px"

[node name="SpinBox_UV_Y" type="SpinBox" parent="HSplitContainer/Sidebar/TabPanelContainer/TilesetTab/GridContainer/HBoxContainer"]
custom_minimum_size = Vector2(2.08165e-12, 0)
layout_mode = 2
min_value = 1.0
max_value = 512.0
value = 16.0
exp_edit = true
rounded = true
allow_greater = true
suffix = "px"

[node name="HBoxContainer2" type="HBoxContainer" parent="HSplitContainer/Sidebar/TabPanelContainer/TilesetTab/GridContainer"]
layout_mode = 2
alignment = 2

[node name="SpinBox_UV_X" type="SpinBox" parent="HSplitContainer/Sidebar/TabPanelContainer/TilesetTab/GridContainer/HBoxContainer2"]
layout_mode = 2
size_flags_horizontal = 8
min_value = 1.0
max_value = 512.0
value = 16.0
exp_edit = true
rounded = true
allow_greater = true
suffix = "px"

[node name="UVTilesizeLabel2" type="Label" parent="HSplitContainer/Sidebar/TabPanelContainer/TilesetTab/GridContainer"]
layout_mode = 2
text = "3D Tilescale:"

[node name="HBoxContainer3" type="HBoxContainer" parent="HSplitContainer/Sidebar/TabPanelContainer/TilesetTab/GridContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="SpinBox_UV_X" type="SpinBox" parent="HSplitContainer/Sidebar/TabPanelContainer/TilesetTab/GridContainer/HBoxContainer3"]
layout_mode = 2
focus_neighbor_right = NodePath("../SpinBox_UV_Y")
focus_next = NodePath("../SpinBox_UV_Y")
min_value = 1.0
max_value = 512.0
value = 16.0
exp_edit = true
rounded = true
allow_greater = true
suffix = "px"

[node name="SpinBox_UV_Y" type="SpinBox" parent="HSplitContainer/Sidebar/TabPanelContainer/TilesetTab/GridContainer/HBoxContainer3"]
custom_minimum_size = Vector2(2.08165e-12, 0)
layout_mode = 2
min_value = 1.0
max_value = 512.0
value = 16.0
exp_edit = true
rounded = true
allow_greater = true
suffix = "px"

[node name="HBoxContainer4" type="HBoxContainer" parent="HSplitContainer/Sidebar/TabPanelContainer/TilesetTab/GridContainer"]
layout_mode = 2
alignment = 2

[node name="SpinBox_UV_X" type="SpinBox" parent="HSplitContainer/Sidebar/TabPanelContainer/TilesetTab/GridContainer/HBoxContainer4"]
layout_mode = 2
size_flags_horizontal = 8
min_value = 1.0
max_value = 512.0
value = 16.0
exp_edit = true
rounded = true
allow_greater = true
suffix = "px"

[node name="UVsTab" type="VBoxContainer" parent="HSplitContainer/Sidebar/TabPanelContainer"]
visible = false
layout_mode = 2

[node name="Label" type="Label" parent="HSplitContainer/Sidebar/TabPanelContainer/UVsTab"]
layout_mode = 2
text = "UV tab"

[node name="PaintTab" type="VBoxContainer" parent="HSplitContainer/Sidebar/TabPanelContainer"]
visible = false
layout_mode = 2

[node name="Label" type="Label" parent="HSplitContainer/Sidebar/TabPanelContainer/PaintTab"]
layout_mode = 2
text = "Paint tab"

[node name="TransformTab" type="VBoxContainer" parent="HSplitContainer/Sidebar/TabPanelContainer"]
visible = false
layout_mode = 2

[node name="Label" type="Label" parent="HSplitContainer/Sidebar/TabPanelContainer/TransformTab"]
layout_mode = 2
text = "Transform tab"

[node name="SceneTab" type="VBoxContainer" parent="HSplitContainer/Sidebar/TabPanelContainer"]
visible = false
layout_mode = 2

[node name="Label" type="Label" parent="HSplitContainer/Sidebar/TabPanelContainer/SceneTab"]
layout_mode = 2
text = "Scene tab"
